--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,8 +34,7 @@ margin-right: auto;
 background-color: white;
 border: 3px solid #aaa;
 border-top: none;
-//padding: 25px;
-width: 99%;
+padding: 15px;
 }
 
 #sidebar {
