--- a/views/index.tt
+++ b/views/index.tt
@@ -40,9 +40,8 @@
 [% IF chorale %]
         <h3>BWV [% bwv %] - "[% title %]"</h3>
 
-        Bigram chord progression transition network diagram derived from
-        <br>
-        the <a href="https://archive.ics.uci.edu/ml/datasets/Bach+Choral+Harmony">UCI Bach Choral Harmony Data Set</a>.
+        Bigram chord progression transition network diagram derived from the
+        <a href="https://archive.ics.uci.edu/ml/datasets/Bach+Choral+Harmony">UCI Bach Choral Harmony Data Set</a>.
         <p>
         <img src="[% image %]" />
         <p>
