--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,7 @@ code, .filepath, .app-info {
 #footer {
 clear: both;
 padding-top: 2em;
-padding-left: 10px;
+padding-left: 1em;
 font-family: sans-serif;
 font-size: 10px;
 }
